Enhance index.html and App.tsx with meta tags and descriptive text
- Added meta tags in index.html for improved SEO, including description, keywords, author, and Open Graph properties.
- Included a descriptive paragraph in App.tsx to provide context about the application's functionality, enhancing user understanding.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="manifest" href="src/assets/favicon_io/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repo To Clipboard</title>
+    <meta name="description" content="GitHub Repo Copier: A modern web application to fetch and copy GitHub repository contents easily. Built with React, TypeScript, and Vite." />
+    <meta name="keywords" content="GitHub, repository, copier, React, TypeScript, Vite, Tailwind CSS, web application" />
+    <meta name="author" content="Julien Hovan" />
+    <meta property="og:title" content="GitHub Repo Copier" />
+    <meta property="og:description" content="Fetch and copy GitHub repository contents easily with this modern web application." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://julienhovan.com" />
   </head>
   <body>
     <div id="root"></div>
