Update index.html with enhanced SEO meta tags and improved title for GitHub Repo Copier

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="src/assets/favicon_io/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Repo To Clipboard</title>
-    <meta name="description" content="GitHub Repo Copier: A modern web application to fetch and copy GitHub repository contents easily. Built with React, TypeScript, and Vite." />
-    <meta name="keywords" content="GitHub, repository, copier, React, TypeScript, Vite, Tailwind CSS, web application" />
+    <title>GitHub Repo Copier - Copy Repository Contents Easily</title>
+    <meta name="description" content="Copy GitHub repository contents with ease. Browse files, view raw content, and copy repository structure. A free tool built with React for developers and GitHub users." />
+    <meta name="keywords" content="GitHub repository copier, copy GitHub files, GitHub content viewer, repository browser, GitHub tools, React, TypeScript, developer tools, GitHub API" />
     <meta name="author" content="Julien Hovan" />
-    <meta property="og:title" content="GitHub Repo Copier" />
-    <meta property="og:description" content="Fetch and copy GitHub repository contents easily with this modern web application." />
+    <meta property="og:title" content="GitHub Repo Copier - Browse and Copy Repository Contents" />
+    <meta property="og:description" content="Browse and copy GitHub repository contents with this free developer tool. View file structure, raw contents, and easily copy repository files." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://julienhovan.com" />
+    <meta property="og:url" content="https://repotoclipboard.com/" />
+    <meta name="robots" content="index, follow" />
+    <meta name="application-name" content="GitHub Repo Copier" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="GitHub Repo Copier - Copy Repository Contents" />
+    <meta name="twitter:description" content="Free tool to browse and copy GitHub repository contents. Perfect for developers and GitHub users." />
   </head>
   <body>
     <div id="root"></div>
